# ball-performance

./: CMakeLists.txt
dependencies/glad/: glad.h
hitboxes/: box.txt
src/: ball.cpp  ball.h  camera.cpp  camera.h  collision.cpp  collision.h  config.h  glad.c  main.cpp  main.h  model.cpp  model.h
src/shaders/: fragment.txt  vertex.txt
